...
                            <button autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UQw-uY-Sxk">
                                <rect key="frame" x="125" y="265.5" width="164" height="164"/>
                                <accessibility key="accessibilityConfiguration" identifier="locationButton">
                                    <accessibilityTraits key="traits" button="YES" image="YES" staticText="YES"/>
                                </accessibility>
...
                            <button autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jft-op-eim">
                                <rect key="frame" x="125" y="485" width="164" height="163.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="organizationButton">
                                    <accessibilityTraits key="traits" button="YES" image="YES"/>
                                </accessibility>
...
            <objects>
                <navigationController id="dCT-Id-8lC" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Search by Location" image="location.fill" catalog="system" id="ktD-Kd-7gA"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zNv-OQ-UZw">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Zip Code/City, State" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="f3S-0V-J9R">
                                <rect key="frame" x="82" y="479" width="250" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="locationField"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" identifier="id24" id="pvo-a2-Ht0"/>
...
                                <color key="textColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                <connections>
                                    <action selector="textFieldChanged:" destination="KbK-px-wgY" eventType="editingChanged" id="0MR-dU-vAC"/>
...
                                </constraints>
                                <segments>
                                    <segment title="Dog"/>
                                    <segment title="Cat"/>
                                    <segment title="Bird"/>
                                    <segment title="Rabbit"/>
                                </segments>
                            </segmentedControl>
...
                                <rect key="frame" x="157" y="675" width="100" height="38"/>
                                <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="searchButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" identifier="id21" id="dB3-PV-PlT"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Cancel"/>
                                <connections>
                                    <segue destination="4H4-na-MWn" kind="unwind" identifier="cancelButtonTappedAtAnimalResultFilters" unwindAction="returnFromFiltersToAnimalResultCollectionViewControllerWithUnwindSegue:" id="EyI-SL-yzk"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filters" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ct9-sO-H7H">
                                <rect key="frame" x="157" y="33.5" width="100" height="26.5"/>
                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Clear All"/>
                                <connections>
                                    <action selector="clearFilters:" destination="KAo-Kd-J4I" eventType="touchUpInside" id="avT-UP-qr0"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d88-Vc-hqS">
                                                <rect key="frame" x="132.5" y="0.0" width="198.5" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="breedFilter"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                <state key="normal" title="Select"/>
                                                <connections>
                                                    <segue destination="SxI-ry-nbN" kind="popoverPresentation" identifier="selectFilterValues" popoverAnchorView="3Zt-nu-32r" id="ptx-87-qkK">
...
                                        <rect key="frame" x="0.0" y="301" width="331" height="32"/>
                                        <segments>
                                            <segment title="10 mi"/>
                                            <segment title="25 mi"/>
                                            <segment title="50 mi"/>
                                            <segment title="100 mi"/>
                                        </segments>
                                        <connections>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="18"/>
                                <state key="normal" title="Apply Filters">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7zJ-gG-hSc">
